--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM pytorch/pytorch:0.4.1-cuda9-cudnn7-devel
 
 RUN pip install pytorch-pretrained-bert
+RUN pip install emoji --upgrade
 
 RUN apt-get update && apt-get install screen
 
